--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=0.85"> <!-- initial-scale=0.85(значение было = 1)-->
     <title>Game</title>
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
